update pom, remove unused import